# seq2seq_system

./: .gitignore  README.md  evaluate.py  pyproject.toml  sample.py
.devcontainer/: .env  devcontainer.json  docker-compose.yml
GPT2_System/: GPT2_system.py
GPT2_System/sample/: test.py  test1.py
dataloader/: minutes_dataset.py  same_minutes_dataset.py  samefiles_polars_read.py
